yaml/app-deployment/web-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-2-deployment
spec:
  selector:
    matchLabels:
      app: web-2
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
      labels:
        app: web-2
    spec:
      containers:
      - name: web-2-app
        image: kmdr7/web-landing-2:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: metrics-config
            mountPath: /etc/nginx/conf.d/metrics.conf
            subPath: metrics.conf
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.5.0
        ports:
          - containerPort: 9113
      volumes:
        - name: metrics-config
          configMap:
            name: nginx-metrics-config
---
apiVersion: v1
kind: Service
metadata:
  name: web-2-service
spec:
  selector:
    app: web-2
  ports:
    - name: web-2
      protocol: TCP
      port: 80
      targetPort: 80
    - name: prom-mon
      protocol: TCP
      port: 9113
      targetPort: 9113
