yaml/app-deployment/alertmanager-1-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alertmanager-1-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - alertmanager-1.mykloud.lokal
  rules:
  - host: alertmanager-1.mykloud.lokal
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
