yaml/app-deployment/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - grafana.mykloud.lokal
  rules:
  - host: grafana.mykloud.lokal
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
