yaml/app-deployment/loki-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: logging
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - loki.mykloud.lokal
  rules:
  - host: loki.mykloud.lokal
    http:
      paths:
      - path: /
        backend:
          serviceName: loki
          servicePort: 3100
